# Vivarium

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py  compaction.py  decider.py  gemini_decider.py  prompt.py  recall.py  reflection.py  runtime.py  tool_schemas.py
bench/: __init__.py  bench_compaction.py  bench_memory.py
bus/: __init__.py  event_bus.py  events.py
chronicles/: 2026-06-29-gemini-run1.md  2026-06-29-gemini-run2.md  2026-06-29-gemini-run4-genesis.md  2026-06-29-gemini-run5-scarcity.md  2026-06-29-gemini-run6-visibleloot.md
config/: __init__.py  loader.py  schema.py  world.yaml
core/: __init__.py  constants.py  exceptions.py  logging.py  rng.py
docs/superpowers/benchmarks/: 2026-06-28-compaction-perf.md  2026-06-28-memory-perf.md  2026-06-30-memory-perf-gemini.md
docs/superpowers/plans/: 2026-06-28-sprint5-memory-foundation.md  2026-06-29-sprint6-integration-multiagent.md  2026-06-30-agent-self-talk.md  2026-07-01-materials-home-layer1.md  2026-07-01-materials-home-layer2a.md  2026-07-01-materials-home-layer2b.md  2026-07-01-materials-home-layer2c.md
docs/superpowers/specs/: 2026-06-27-production-foundation-design.md  2026-06-28-sprint4-agent-runtime-design.md  2026-06-28-sprint5-memory-design.md  2026-06-28-sprint5.1-resident-memory-block.md  2026-06-28-sprint5.5-compaction-design.md  2026-06-29-sprint6-integration-multiagent-design.md  2026-06-29-sprint7-mating-constraints-design.md  2026-06-29-sprint7-spawn-watcher-design.md  2026-06-30-agent-self-talk-design.md  2026-07-01-materials-home-layer1-design.md  2026-07-01-materials-home-layer2-design.md  2026-07-01-materials-home-layer2c-design.md  2026-07-01-materials-home-overall-design.md
memory/: __init__.py  embedding.py  models.py  scoring.py  store.py  vector_store.py
observability/: __init__.py  activity_feed.py  event_log.py  usage.py
scripts/: __init__.py  chronicle.py  run.py
tests/: breathing_test.py  conftest.py  ollama_latency_test.py
tests/agents/: compaction_test.py  decider_test.py  gemini_decider_test.py  prompt_test.py  recall_test.py  reflection_test.py  runtime_test.py  tool_schemas_test.py
tests/bus/: __init__.py  event_bus_test.py  events_test.py
tests/config/: __init__.py  loader_test.py  schema_test.py
tests/core/: __init__.py  constants_test.py  exceptions_test.py  logging_test.py  rng_test.py
tests/integration/: __init__.py  breathing_test.py  memory_smoke_test.py  ollama_latency_test.py  sprint4_smoke_test.py
tests/memory/: embedding_test.py  models_test.py  scoring_test.py  store_test.py  vector_store_test.py
tests/observability/: activity_feed_test.py  event_log_test.py  usage_test.py
tests/scripts/: run_test.py
tests/tools/: __init__.py  combat_test.py  communication_test.py  homes_test.py  mating_test.py  movement_test.py  registry_test.py  resources_test.py
tests/world/: __init__.py  agents_test.py  homes_test.py  regions_test.py  tick_test.py  world_test.py
tools/: __init__.py  registry.py
tools/builtin/: __init__.py  combat.py  communication.py  homes.py  mating.py  movement.py  resources.py
world/: agents.py  homes.py  regions.py  tick.py  world.py
